--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,3 +43,16 @@ $textWhite: #fff;
 .dark-background {
   background: $dark
 }
+
+.loader {
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  width: 100vw;
+}
+
+.loader__image {
+  height: 6rem;
+  width: 6rem;
+}
