--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,107 +1,216 @@
-$dark: #343a40;
-$textWhite: #fff;
-$baige: #f1e8ac;
+/* --- IMPORTS --- */
 
-.center-vertically {
-  align-items: center;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  width: 100vw;
+@import './settings';
+@import "~bootstrap/scss/bootstrap";
+@import './material-select';
+@import './form-inputs';
+// @import "~materialize-css/dist/css/materialize.min.css";
+
+
+/* --- GENERAL COMPONENTS ---*/
+
+// All links
+a:hover {
+  text-decoration: none;
+  color: $primary-dark;
 }
 
-.modal {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 33vh;
-  justify-content: center;
-  width: 33vw;
-  margin: auto;
-}
-
-.filter-modal {
-  height: 67vh;
-  width: 67vw;
-}
-
-.scrollable {
-  height: 53vh;
-  overflow-y: auto;
-}
+// General classes
 
 .center-horrizontally {
   display: flex;
   justify-content: center;
-  width: 100vw;
 }
 
-.button-center {
+.center-vertically {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
+.center-object-horrizontally-and-vertically {
+  margin: auto;
+}
+
+.center-text {
+  text-align: center;
+}
+
+// Causes the checkboxes to appear in a grid
+.overflow {
+  overflow: hidden;
+  white-space:nowrap;
+  text-overflow:ellipsis;
+  width:170px;
+  display:inline-block;
+}
+
+// Causes the content to scroll if it occupies > 50% of view line-height
+// The modal takes up 65% of view height, with other stuff in it.
+.scrollable {
+  overflow: scroll;
+  height: 50vh;
+}
+
+.card-1 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-1:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.card-2 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-2:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.card-3 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-3:hover {
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+.card-4 {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-4:hover {
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+.card-5 {
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+/* --- Base components --- */
+
+// Modal
+
+.custom-modal {
+  // @include center-vertically;
+  display: flex;
+  // flex-direction: column;
+  height: 33vh;
+  width: 33vw;
+  // Center the modal itself
+  // margin: auto;
+  justify-content: center;
+  align-items: center;
+  @extend .center-object-horrizontally-and-vertically;
+  // Center the content in the modal
+  // @include center-horrizontally;
+}
+
+.modal__large-modal {
+  height: 67vh;
+  width: 67vw;
+  position: absolute;
+  top: 16%;
+  left: 16%;
+}
+
+.modal__medium-modal {
+  height: 33vh;
+  width: 33vw;
+  position: absolute;
+  top: 33%;
+  left: 33%;
+  flex-direction: column;
+}
+
+// ButtonLink
+
 .button-link {
   background-color: $dark;
+  // background-color: FF0000;
   color: rgba(255,255,255,.5);
   border: none;
   display: inline-block;
-  line-height: 1;
+  line-height: 1.1;
   text-decoration: none;
   margin-top: 11px;
   font-family: "Helvetica Neue";
+  box-sizing: content-box;
+  cursor: pointer;
+  text-align: left;
+  @media (max-width: $break-m) {
+    padding: 0;
+  }
 }
 
 .button-link:hover {
   color: rgba(255,255,255,.75);
 }
 
-.dark-background {
-  background: $dark
+/* --- CUSTOM COMPONENTS --- */
+
+// AddFriendForm
+
+.add-friend-form__label {
+  color:#999;
+  font-size:18px;
+  font-weight:normal;
+  padding:10px 10px 10px 5px;
 }
 
-.loader {
-  align-items: center;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  width: 100vw;
+.add-friend-form__button-width {
+  width: $input-width
 }
 
-.loader__image {
-  height: 6rem;
-  width: 6rem;
+// BottomPanel
+
+.bottom-panel__large-gutter-row {
+
 }
 
-.vertical-splitter {
-  border-left: $dark;
-}
 
-.noun-image {
+// LandingPage
+
+.landing-page__icon {
   height: 150px;
   width: 150px;
 }
 
-.noun-text {
-  height: 250px;
-  width: 250px;
+// ListList
+
+.list-list {
+  width: $input-width + 30px;
+  font-size: $input-label-font-size
 }
 
-.baige-background {
-  background: $baige;
-  color: $baige;
+// LoadingPage
+
+.loading-page__loader-image {
+  height: 6rem;
+  width: 6rem;
 }
 
-.message-box {
-  height: 100px;
-  width: 100px
+// LocationsSelector
+
+.locations-selector {
+  height: 53vh;
 }
 
-.overflow {
-    overflow: hidden;
-    white-space:nowrap;
-    text-overflow:ellipsis;
-    width:150px;
-    display:inline-block;
+// Navbar
+
+.navbar__card-2 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+
+// TopPanel
+
+.top-panel {
+  // @extend .card-2;
+  @extend .mb-4;
+  @extend .p-3;
 }
